--- a/Whats in your fridge/assets/css/style.css
+++ b/Whats in your fridge/assets/css/style.css
@@ -8,10 +8,10 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
+
 body {
-  font-family: "Open Sans", sans-serif;
-  background-color: #040404;
-  color: black;
+  font-family: 'Lato', sans-serif;
   position: relative;
   background: transparent;
 }
@@ -19,7 +19,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/bg.jpg") top right no-repeat;
+  background: #FFE19C;
   background-size: cover;
   left: 0;
   right: 0;
@@ -28,6 +28,8 @@ body::before {
   z-index: -1;
 }
 
+
+
 @media (min-width: 1024px) {
   body::before {
     background-attachment: fixed;
@@ -35,7 +37,11 @@ body::before {
 }
 
 a {
-  color: gray;
+  color: #183A37;
+}
+
+ .nav-menu d-none d-lg-block li a {
+     color: #183A37;
 }
 
 a:hover {
@@ -50,6 +56,24 @@ h1, h2, h3, h4, h5, h6 {
 #logo > img {
   margin:10px;
 }
+
+
+/* Landing-page */ 
+
+.turquoise-text {
+    color: #70A9A1;
+    font-size: 25px;
+    text-align: center;
+}
+
+
+#get-started {
+    background-color: #183A37;
+   
+}
+
+
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
@@ -162,8 +186,8 @@ h1, h2, h3, h4, h5, h6 {
 .nav-menu a {
   display: block;
   position: relative;
-  color: rgba(255, 255, 255, 0.7);
-  font-size: 16px;
+  color: #183A37;
+  font-size: 15px;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
 }
@@ -187,9 +211,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #fff;
+  color: #70A9A1;
   text-decoration: none;
 }
+
+#logo2 {
+    transform: scale(.4,.4);
+   
+}
+
 
 /* Mobile Navigation */
 .mobile-nav-toggle {
@@ -281,7 +311,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   top: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: #EBE6D9;
 }
 
 #header.header-top .social-links, #header.header-top h2 {
